# python-gaitalytics

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  environment.yml  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: github-actions.yml  manual_test_library.yaml  on_push_test.yaml  on_tag_release.yaml  publish-to-test-pypi.yml
ci/: bootstrap.py
conda/: meta.yaml
conda.recipe/: meta.yaml
docs/: api.rst  authors.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
docs/_static/: Gaitalytics.bib
docs/_static/tables/: event_table.csv  features.csv  mapping.csv
docs/extend/: features.rst  index.rst
docs/reference/: events.rst  features.rst  gaitalytics.rst  index.rst  io.rst  mapping.rst  model.rst  normalisation.rst  segmentation.rst
docs/usage/: data_loading.rst  event_detection.rst  export.rst  features.rst  index.rst  normalisation.rst  segmentation.rst
example/: calculate_features.py  detect_events.py  export.py  normalize_trial.py  segment_trial.py
examples/: pipeline_hbm_analysis.py  pipeline_hbm_events.py  pipeline_hbm_extraction_normalisation.py  pipeline_hbm_modelling.py  pipline_coherence.py
gaitalytics/: __init__.py  _version.py  api.py  events.py  features.py  io.py  mapping.py  model.py  normalisation.py  segmentation.py
gaitalytics/utils/: linalg.py  math.py  mocap.py
settings/: hbm_pig.yaml
src/gaitalytics/: __main__.py  analysis.py  api.py  c3d_reader.py  cli.py  cycle.py  cycle_nomalisation.py  cycle_normalisation.py  emg.py  events.py  file.py  files.py  model.py  modelling.py  plot.py  utils.py
tests/: pig_config.yaml  test_api.py  test_gaitalytics.py  treadmill_events.c3d  treadmill_no_events.c3d
tests/full/: test_events.py  test_features.py  test_io.py  test_linalg.py  test_mapping.py  test_model.py  test_normalisation.py  test_segmentation.py
tests/full/config/: analogs_config.yaml  pig_config.yaml
tests/full/data/: test_small.c3d  test_small.mot
